--- a/ABIMSIM/MainMenuView_iPad.xib
+++ b/ABIMSIM/MainMenuView_iPad.xib
@@ -36,11 +36,10 @@
                                 <constraint firstAttribute="height" constant="316" id="L1n-c8-Yy5"/>
                                 <constraint firstAttribute="width" constant="316" id="n5p-e4-iFA"/>
                             </constraints>
-                            <state key="normal" image="PlayText_0_iPad">
+                            <state key="normal" title="PLAY">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <state key="selected" image="PlayText_1_iPad"/>
-                            <state key="highlighted" image="PlayText_1_iPad"/>
                             <connections>
                                 <action selector="playDeselect:" destination="iN0-l3-epB" eventType="touchDragExit" id="hxA-de-ac8"/>
                                 <action selector="playSelect:" destination="iN0-l3-epB" eventType="touchDragEnter" id="CZ0-op-0JE"/>
@@ -67,11 +66,10 @@
                                 <constraint firstAttribute="width" constant="208" id="G9H-tu-cE6"/>
                                 <constraint firstAttribute="height" constant="208" id="MEK-pQ-ZRX"/>
                             </constraints>
-                            <state key="normal" image="HighScoresText_0_iPad">
+                            <state key="normal" title="HIGH SCORES">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <state key="selected" image="HighScoresText_1_iPad"/>
-                            <state key="highlighted" image="HighScoresText_1_iPad"/>
                             <connections>
                                 <action selector="highScoresDeselect:" destination="iN0-l3-epB" eventType="touchDragExit" id="G5x-ek-CTQ"/>
                                 <action selector="highScoresSelect:" destination="iN0-l3-epB" eventType="touchDown" id="Ls6-6b-5PA"/>
@@ -98,11 +96,10 @@
                                 <constraint firstAttribute="width" constant="251" id="2AQ-0w-9hd"/>
                                 <constraint firstAttribute="height" constant="251" id="Itj-Od-wGJ"/>
                             </constraints>
-                            <state key="normal" image="UpgradesText_0_iPad">
+                            <state key="normal" title="UPGRADES">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <state key="selected" image="UpgradesText_1_iPad"/>
-                            <state key="highlighted" image="UpgradesText_1_iPad"/>
                             <connections>
                                 <action selector="upgradesDeselect:" destination="iN0-l3-epB" eventType="touchDragExit" id="BuP-2y-Sl2"/>
                                 <action selector="upgradesSelect:" destination="iN0-l3-epB" eventType="touchDragEnter" id="cvO-JO-1Ie"/>
@@ -245,17 +242,11 @@
         <image name="HS_2_iPad" width="191" height="191"/>
         <image name="HS_3_iPad" width="208" height="208"/>
         <image name="HamburgerToClose_000" width="62" height="62"/>
-        <image name="HighScoresText_0_iPad" width="104" height="74"/>
-        <image name="HighScoresText_1_iPad" width="105" height="75"/>
         <image name="Logo_TitleScreen_iPad" width="593" height="85"/>
-        <image name="PlayText_0_iPad" width="135" height="74"/>
-        <image name="PlayText_1_iPad" width="138" height="77"/>
         <image name="Play_0_iPad" width="258" height="258"/>
         <image name="Play_1_iPad" width="300" height="300"/>
         <image name="Play_2_iPad" width="300" height="300"/>
         <image name="Play_3_iPad" width="316" height="316"/>
-        <image name="UpgradesText_0_iPad" width="145" height="37"/>
-        <image name="UpgradesText_1_iPad" width="146" height="38"/>
         <image name="Upgrades_0_iPad" width="193" height="193"/>
         <image name="Upgrades_1_iPad" width="231" height="231"/>
         <image name="Upgrades_2_iPad" width="231" height="231"/>
