--- a/ABIMSIM/UpgradeTableViewCell.xib
+++ b/ABIMSIM/UpgradeTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -36,6 +36,10 @@
                         <state key="highlighted" image="UpgradeText_1"/>
                         <connections>
                             <action selector="upgradeButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IBU-V8-eRb"/>
+                            <action selector="upgradeDeslect:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9Ym-U5-pcL"/>
+                            <action selector="upgradeDeslect:" destination="KGk-i7-Jjw" eventType="touchDragExit" id="Tya-3x-zJs"/>
+                            <action selector="upgradeSelect:" destination="KGk-i7-Jjw" eventType="touchDragEnter" id="j0W-i8-UfH"/>
+                            <action selector="upgradeSelect:" destination="KGk-i7-Jjw" eventType="touchDown" id="kKB-jq-luk"/>
                         </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f2j-Ii-iGG">
